[package]
name = "volume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
evdev = "0.11.4"
rust-pulsectl-fork = "0.2.12"
libpulse-binding = "2.26.0"

